[project]
name = "hyakvnc"
version = "2.0"
description = "Create and manage VNC sessions on HYAK Klone."
authors = [
  { name = "Hansem Ro", email = "hansem7@uw.edu" },
  { name = "Altan Orhon", email = "altan@uw.edu" },
]
dependencies = []
requires-python = ">=3.6"
license = { text = "MIT" }
readme = "README.md"

[project.optional-dependencies]
dev = ["pre-commit", "black", "flake8"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.setuptools.packages.find]
where = ["hyakvnc"]

[project.scripts]
hyakvnc = "hyakvnc:__main__"

[project.urls]
homepage = "https://github.com/uw-psych/hyakvnc"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
